# relign

./: .gitignore  LICENSE  README.md  devenv.nix  flake.nix  flax_test.py  gitignore.py  main.py  notes.txt  pyproject.toml  requirements.txt  run.py  setup.py  test.py  train_loop.py
agent/: __init__.py  agent_base.py  archer_agent.py  base.py  factory.py
algorithms/: base_algorithm.py  base_trainer.py  off_policy_algorithm.py  on_policy_algorithm.py
algorithms/archer/: policy.py  trainer.py
algorithms/ppo/: data_collator.py  trainer.py
common/: arguments.py  buffer.py  dataset.py  deepspeed_utils.py  types.py  utils.py
config/: archer_city.yaml  default.yaml
configs/: config.yaml
configs/deepspeed/: base.jsonnet  lr_scheduler.jsonnet  optimizer.jsonnet  zero_0.jsonnet  zero_0.yaml  zero_2.jsonnet  zero_2.yaml
configs/deepspeed/optimizer/: adamw.yaml
configs/deepspeed/scheduler/: warmup_decay_lr.yaml
configs/episode_generators/: math.jsonnet  math_grouped_rewards.jsonnet
configs/evaluators/: base_eval.jsonnet  gsm8k.jsonnet
configs/evaluators/analyzers/: task_performance.jsonnet
configs/experiments/: base.jsonnet  gsm8k_rho_1b_cot_grpo.jsonnet  gsm8k_rho_1b_cot_ppo.jsonnet
configs/models/: rho_1b.jsonnet
configs/policies/: actor.jsonnet  actor_critic.jsonnet
configs/prompt_sets/: math.jsonnet
configs/prompts/: gsm8k_standard.jsonnet
configs/reward_functions/: math_reward.jsonnet
configs/tasks/: gsm8k.jsonnet
configs/train_loop/: train_loop.jsonnet
configs/trainer/: grpo.jsonnet
configs/trainers/: grpo.jsonnet  ppo.jsonnet
critic/: double_critic.py
data/gsm8k/test/: state.json  (+17 more)
environment/: __init__.py  base.py  environment_base.py  environment_factory.py  factory.py  guess_my_city.py  utils.py
environment/guess_city/: data.py  env.py  guess_city[dec].py
episode_generation/environment/: base_environment.py  utils.py
episode_generation/inference/: tree_inference.py
episode_generators/: base_episode_generator.py
episode_generators/environment/: base_environment.py  environment_factory.py  utils.py
episode_generators/inference/: base_inference_strategy.py
examples/: engine_init.py  grpo_cot_gsm.py  grpo_gsm.py  ppo_cot_gsm.py  ppo_cot_gsm_experimental.py  ppo_gsm.py  test_model.py
path/to/: train_loop.py
policies/: __init__.py  actor_critic_policy.py  base_critic.py  base_policy.py  double_critic.py  policy_factory.py
policy/: base_policy.py  policy_factory.py
relign.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
runners/: base_runner.py
scripts/: start_vllm_server_named_params.sh
src/relign/: __init__.py  main.py
tests/: ac_policy_test.py  conftest.py  distributed_runner_test.py  runner_test.py  test_distributed_runner.py  test_episode_generator.py  test_eval.py  test_policies.py  test_runtime.py  test_trainers.py  test_vllm.py  train_loop_test.py
tests/fixtures/: common_fixtures.py  episode_generation_fixtures.py  eval_fixtures.py  guidance_fixtures.py  inference_fixtures.py  policies_fixtures.py  runners_fixtures.py  task_fixtures.py  trainer_fixtures.py
tests/mock_data/: gpt2_imdb_ppo_iter50_samples.json
trainer/: archer_trainer.py
(+443 files in other folders)
