[project]
name = "relign"
version = "0.1.0"
description = "post-training library for reasoning models"
authors = [{ name = "algopapi" }]
requires-python = ">=3.10"
dependencies = [
    "base58>=2.1.1",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "diskcache>=5.6.3",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "mpi4py>=4.0.2",
    "nltk>=3.9.1",
    "openai>=1.61.1",
    "pygtrie>=2.5.0",
    "pylatexenc>=2.10",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["relign"]

[tool.pytest.ini_options]
minversion = "6.0"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
