[project]
name = "relign"
version = "0.1.0"
description = "post-training library for reasoning models"
authors = [{ name = "algopapi" }]
requires-python = ">=3.10"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pytest.ini_options]
minversion = "6.0"

[tool.pixi.dependencies]
accelerate = ">=1.3.0"
base58 = ">=2.1.1"
datasets = ">=3.2.0"
deepspeed = ">=0.16.3"
diskcache = ">=5.6.3"
evaluate = ">=0.4.3"
hydra-core = ">=1.3.2"
vllm-nccl-cu12 = "==2.18.1.0.4.0"
matplotlib = ">=3.10.0"
mpi4py = ">=4.0.2"
nltk = ">=3.9.1"
pygtrie = ">=2.5.0"
pylatexenc = ">=2.10"
tokenizers = ">=0.21.0"
tqdm = ">=4.67.1"
transformers = ">=4.48.3"
wandb = ">=0.19.6"

[tool.pixi.pypi-dependencies]
openai = ">=1.61.1"
nest_asyncio = ">=1.6.0"
ninja = ">=1.11.1.3"
pylatexenc = "2.10"
relign = { path = "." , editable = true }

[dependency-groups]
test = [
    "pytest",
]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
