[project]
name = "relign"
version = "0.1.0"
description = "post-training library for reasoning models"
authors = [{ name = "algopapi" }]
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "wandb",
    "vllm",
    "tqdm",
    "numpy",
    "openai",
    "pygtrie",
    "transformers",
    "tokenizers",
    "torch",
    "accelerate",
    "deepspeed",
    "datasets",
    "setuptools",
    "nest-asyncio",
    "diskcache",
    "evaluate",
    "base58",
    "typer",
    "inquirer",
    "jsonnet"
]

[project.optional-dependencies]
math = ["pylatexenc"]

# All dependencies
all = ["pylatexenc"]  

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["relign"]

[tool.pytest.ini_options]
minversion = "6.0"

# add the main entry point
[project.scripts]
relign = "relign.main:app"
